RESOLVED FIXED287863
REGRESSION(290502@main): Triggers assertion in TestWebKitAPI.WKWebViewCandidateTests.ShouldNotRequestCandidatesInPasswordField
https://bugs.webkit.org/show_bug.cgi?id=287863
Summary REGRESSION(290502@main): Triggers assertion in TestWebKitAPI.WKWebViewCandida...
Jonathan Bedard
Reported 2025-02-18 08:44:48 PST
History gives us a range, but I locally bisected to 290502@main. Stack trace: TestWebKitAPI.WKWebViewCandidateTests.ShouldNotRequestCandidatesInPasswordField 2025-02-18 06:29:10.833 TestWebKitAPI[46787:953900] +[IMKClient subclass]: chose IMKClient_Modern ASSERTION FAILED: !m_inSecureInputState /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKit/UIProcess/mac/WebViewImpl.mm(1354) : WebKit::WebViewImpl::~WebViewImpl() 1 0x1550fc958 WebKit::WebViewImpl::~WebViewImpl() 2 0x1550fd175 WebKit::WebViewImpl::~WebViewImpl() 3 0x154577bed WebKit::WebViewImpl::operator delete(WebKit::WebViewImpl*, std::destroying_delete_t, unsigned long) 4 0x154577b40 std::__1::default_delete<WebKit::WebViewImpl>::operator()[abi:sn180100](WebKit::WebViewImpl*) const 5 0x154577a5c std::__1::unique_ptr<WebKit::WebViewImpl, std::__1::default_delete<WebKit::WebViewImpl>>::reset[abi:sn180100](WebKit::WebViewImpl*) 6 0x154577cc9 std::__1::unique_ptr<WebKit::WebViewImpl, std::__1::default_delete<WebKit::WebViewImpl>>::~unique_ptr[abi:sn180100]() 7 0x154533765 std::__1::unique_ptr<WebKit::WebViewImpl, std::__1::default_delete<WebKit::WebViewImpl>>::~unique_ptr[abi:sn180100]() 8 0x154541484 -[WKWebView .cxx_destruct] 9 0x7ff8185bd121 object_cxxDestructFromClass(objc_object*, objc_class*) 10 0x7ff8185b64d5 objc_destructInstance 11 0x7ff8185b646e _objc_rootDealloc 12 0x7ff81c41659f -[NSResponder dealloc] 13 0x7ff81c414447 -[NSView dealloc] 14 0x1545360dc -[WKWebView dealloc] 15 0x7ff8185b9d42 AutoreleasePoolPage::releaseUntil(objc_object**) 16 0x7ff8185b705a objc_autoreleasePoolPop 17 0x10c455f84 main 18 0x7ff8185f62cd start LEAK: 1 WebPage LEAK: 1 WebFrame LEAK: 12 RenderObject LEAK: 1 Page LEAK: 1 Frame LEAK: 1 CachedResource LEAK: 26 WebCoreNode LEAK: 6 JSLazyEventListener
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-18 08:45:07 PST
Andy Estes
Comment 2 2025-02-18 09:43:14 PST
EWS
Comment 3 2025-02-18 13:31:23 PST
Committed 290548@main (4e04f80f4db5): <https://commits.webkit.org/290548@main> Reviewed commits have been landed. Closing PR #40764 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.