REGRESSION(290502@main): Triggers assertion in TestWebKitAPI.WKWebViewCandidateTests.ShouldNotRequestCandidatesInPasswordField https://bugs.webkit.org/show_bug.cgi?id=287863 rdar://145062868

Reviewed by Wenson Hsieh.

Closing TestWKWebView's host window at the end of each API test exposed an assertion failure when
the window is first responder when closed. Resolved by observing NSWindowWillCloseNotification and
calling WebViewImpl::resetSecureInputState() when the notification is dispatched.

Covered by existing API tests.

* Source/WebKit/UIProcess/mac/WebViewImpl.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(-[WKWindowVisibilityObserver startObserving:]):
(-[WKWindowVisibilityObserver _windowWillClose:]):
(WebKit::WebViewImpl::windowWillClose):

Canonical link: https://commits.webkit.org/290548@main